src/test/ui/generic-associated-types/missing-bounds.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/missing-bounds.rs:11:9
   |
LL |         A(self.0 + rhs.0)
   |         ^^--------------^
   |           |
   |           expected `B`, found `<B as Add<_>>::Output`
   |
note: tuple struct defined here
  --> $DIR/missing-bounds.rs:5:1
   |
LL | struct A<B>(B);
   | ^^^^^^^^^^^^^^^
help: provide an argument of the correct type
   |
LL |         struct A<B>(B);({B})
   |         ^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/missing-bounds.rs:21:9
   |
LL |         Self(self.0 + rhs.0)
   |         ^^^^^--------------^
   |              |
   |              expected `B`, found `<B as Add<_>>::Output`
   |
note: tuple struct defined here
  --> $DIR/missing-bounds.rs:15:1
   |
LL | struct C<B>(B);
   | ^^^^^^^^^^^^^^^
help: provide an argument of the correct type
   |
LL |         struct C<B>(B);({B})
   |         ^^^^^^^^^^^^^^^^^^^^

error[E0369]: cannot add `B` to `B`
  --> $DIR/missing-bounds.rs:31:21
   |
LL |         Self(self.0 + rhs.0)
   |              ------ ^ ----- B
   |              |
   |              B
   |
help: consider restricting type parameter `B`
   |
LL | impl<B: std::ops::Add<Output = B>> Add for D<B> {
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0369.
For more information about an error, try `rustc --explain E0308`.
